# tailscale-rs

./: .coderabbit.yaml  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  LICENSE  README.md  SECURITY.md  VENDOR.md  deny.toml  release-please-config.json
.github/: dependabot.yml
.github/workflows/: c.yml  ci.yml  elixir.yml  nix.yml  python.yml  release-binaries.yml  release-please.yml  release.yml  stale.yml
checks/src/: funnel_fail_closed.rs  ipv4_only_forwarder.rs  ipv4_only_host_net.rs  lints_enabled.rs  main.rs  ssh_isolation.rs
docs/: CRYPTOGRAPHY.md  CRYPTO_VERIFICATION_STATUS.md  IDLE-WEDGE-RESEARCH.md  LIVE_SETTABLE_PREFS.md  MIGRATION_STATUS.md  PARITY_ROADMAP.md  RELEASING.md
scripts/: .gitignore  pebble-down.sh  pebble-up.sh  publish-crates.sh  setup-trusted-publishing.sh
src/: config.rs  dial.rs  error.rs  http.rs  lib.rs  loopback.rs
src/ssh/: channel_server.rs  mod.rs  ratatui.rs  shell.rs
tests/: basic.rs  tailnet_e2e_campaign.rs  tailnet_live.rs
tests/vectors/: VENDOR.md  blake2s_kat.json  control_noise_be_aead.json  control_noise_ik_transcript.json  ed25519_zip215_go_verdicts.json  nacl_box_kat.json  tka_aum_hash_golden.json  tka_cbor_sighash_golden.json  tka_disablement_golden.json  wireguard_handshake_transport.json
ts_array256/: Cargo.toml
ts_bart/: Cargo.toml
ts_bart_packetfilter/: Cargo.toml
ts_bart_packetfilter/src/: dst_port.rs  lib.rs
ts_bitset/: Cargo.toml
ts_capabilityversion/: Cargo.toml
ts_cli_util/: Cargo.toml
ts_cli_util/src/: lib.rs
ts_control/: Cargo.toml
ts_control/src/: acme.rs  cert.rs  config.rs  control_dialer.rs  derp.rs  dns.rs  hostinfo.rs  lib.rs  map_request_builder.rs  node.rs  serve.rs  service.rs  ssh_policy.rs  tka.rs  wif.rs
ts_control/src/tokio/: client.rs  connect.rs  id_token.rs  logout.rs  map_stream.rs  mod.rs  ping.rs  register.rs  set_dns.rs  tka_mutation.rs  tka_sync.rs
ts_control/tests/: acme_pebble.rs
ts_control_noise/: Cargo.toml
ts_control_noise/src/: cipher.rs  codec.rs  handshake.rs  messages.rs
ts_control_noise/tests/: noise_ik_transcript_kat.rs
ts_control_serde/: Cargo.toml
ts_control_serde/src/: client_version.rs  debug.rs  derp_map.rs  dial_plan.rs  dns.rs  env_type.rs  host_info.rs  id_token.rs  lib.rs  net_info.rs  netmap.rs  node.rs  register.rs  service.rs  service_vip.rs  set_dns.rs  ssh_policy.rs  tka_bootstrap.rs  tka_mutation.rs  tka_sync.rs  tpm.rs  user.rs  util.rs
ts_dataplane/: Cargo.toml
ts_dataplane/src/: async_tokio.rs  lib.rs
ts_derp/: Cargo.toml
ts_derp/src/: client.rs  dial.rs  error.rs  lib.rs  rate_limit.rs
ts_disco_protocol/: Cargo.toml
ts_disco_protocol/src/: endpoint.rs  error.rs  header.rs  lib.rs  packet.rs
ts_disco_protocol/tests/: salsabox_nacl_box_kat.rs
ts_dns_wire/: Cargo.toml  README.md
ts_dns_wire/src/: lib.rs
ts_dynbitset/: Cargo.toml
ts_elixir/lib/: tailscale.ex
ts_ffi/: Cargo.toml  README.md
ts_ffi/src/: capture.rs  config.rs  (+11 more)
ts_forwarder/: Cargo.toml  README.md
ts_forwarder/src/: all_port.rs  class.rs  dialer.rs  forwarder.rs  lib.rs  tcp.rs  udp.rs
ts_forwarder/tests/: antileak_runtime.rs  forwarding.rs  ipv4_only_guard.rs
ts_hexdump/: Cargo.toml
ts_host_net/: Cargo.toml  README.md
ts_host_net/src/: lib.rs  linux.rs  macos.rs
ts_http_util/: Cargo.toml
ts_keys/: Cargo.toml
ts_keys/src/: keystate.rs  lib.rs  macros.rs
ts_keys/tests/: wycheproof_x25519.rs
ts_magicsock/: Cargo.toml  README.md
ts_magicsock/src/: disco.rs  endpoint.rs  error.rs  lib.rs  metrics.rs  path.rs  sock.rs  stun.rs
ts_metrics/: Cargo.toml  README.md
ts_metrics/src/: lib.rs
ts_netcheck/: Cargo.toml
ts_netcheck/src/: derp_latency.rs  lib.rs  stun.rs
ts_netmon/: Cargo.toml  README.md
ts_netmon/src/: lib.rs
ts_netstack_smoltcp/: Cargo.toml
ts_netstack_smoltcp_core/: Cargo.toml  README.md
ts_netstack_smoltcp_core/src/: config.rs  lib.rs  stack_control_impl.rs
ts_netstack_smoltcp_core/src/command/: stack_control.rs  udp.rs
ts_netstack_smoltcp_core/src/command/tcp/: listen.rs  stream.rs
ts_netstack_smoltcp_core/src/socket_impl/: mod.rs  raw.rs  udp.rs
ts_netstack_smoltcp_core/src/socket_impl/tcp/: listener.rs  mod.rs  stream.rs
ts_netstack_smoltcp_core/tests/: bound_ports.rs  capacity.rs  udp.rs
ts_netstack_smoltcp_socket/: Cargo.toml
ts_netstack_smoltcp_socket/src/: create_socket.rs  lib.rs  ping.rs  udp.rs
ts_netstack_smoltcp_socket/src/tcp/: listener.rs  stream.rs
ts_nodecapability/: Cargo.toml
ts_overlay_router/: Cargo.toml
ts_packet/: Cargo.toml
ts_packet/src/: geneve.rs  lib.rs
ts_packetfilter/: Cargo.toml
ts_packetfilter/src/: ip_proto.rs  lib.rs  rule.rs
ts_packetfilter_serde/: Cargo.toml
ts_packetfilter_state/: Cargo.toml
ts_peercapability/: Cargo.toml
ts_python/: Cargo.toml
ts_runtime/: Cargo.toml
ts_runtime/src/: capture.rs  control_runner.rs  dataplane.rs  derp_latency.rs  device_state.rs  direct.rs  env.rs  error.rs  exit_node_suggest.rs  fallback_tcp.rs  forwarder_actor.rs  funnel.rs  ipn_bus.rs  lib.rs  magic_dns.rs  multiderp.rs  netmon.rs  netstack_actor.rs  packetfilter.rs  peerapi.rs  peerapi_doh.rs  route_updater.rs  serve.rs  src_filter.rs  status.rs  taildrop.rs  taildrop_send.rs  tka_sync.rs  tun_actor.rs
ts_runtime/src/peer_tracker/: mod.rs  peer_db.rs
ts_time/: Cargo.toml
ts_tka/: Cargo.toml  README.md
ts_tka/fuzz/: Cargo.toml
ts_tka/fuzz/fuzz_targets/: aum_from_cbor.rs  cbor_decode.rs
ts_tka/src/: cbor.rs  lib.rs
ts_tka/tests/: cbor_decode_smoke.rs  wycheproof_ed25519.rs
ts_tls_util/: Cargo.toml
ts_tls_util/src/: insecure.rs  lib.rs  pinned.rs
ts_tls_util/tests/: pinned_handshake.rs
ts_transport/: Cargo.toml
ts_transport_tun/: Cargo.toml
ts_tunnel/: Cargo.toml
ts_tunnel/benches/: constant_time.rs
ts_tunnel/examples/: handshake.rs
ts_tunnel/src/: config.rs  endpoint.rs  handshake.rs  macs.rs  messages.rs  replay.rs  session.rs
ts_tunnel/tests/: blake2s_kat.rs  wycheproof_chacha20poly1305.rs  wycheproof_xchacha20poly1305.rs
ts_underlay_router/: Cargo.toml
(+45 files in other folders)
