[package]
name = "ts_control"
version.workspace = true
description = "tailscale control client"
categories = ["api-bindings", "network-programming"]
keywords = ["tailscale", "control"]

repository.workspace = true
edition.workspace = true
license.workspace = true

rust-version.workspace = true

[dependencies]
# Our crates.
ts_bitset.workspace = true
ts_capabilityversion = { workspace = true, features = ["serde"] }
ts_control_noise.workspace = true
ts_control_serde.workspace = true
ts_dynbitset.workspace = true
ts_http_util.workspace = true
ts_keys.workspace = true
ts_nodecapability = { workspace = true, features = ["serde"] }
ts_packet.workspace = true
ts_packetfilter.workspace = true
ts_packetfilter_state.workspace = true
ts_tls_util.workspace = true
ts_derp.workspace = true

# Unconditionally required dependencies.
bytes.workspace = true
# TLS server material for `Device::listen_tls` / `get_certificate`. Same
# `tokio-rustls`/`ring` provider the rest of the stack (`ts_tls_util`) uses, so
# no second crypto backend is introduced. Pure-Rust PEM decoder keeps musl-static.
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
rustls-pemfile = "2"
chrono = { workspace = true, features = ["serde"] }
gethostname.workspace = true
ipnet = { workspace = true, features = ["serde"] }
lazy_static.workspace = true
pin-project-lite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio-util = { workspace = true, features = ["time"] }
tracing.workspace = true
url = { workspace = true, features = ["serde", "std"] }
zerocopy.workspace = true

# Required dependencies for the async_tokio feature.
futures-util = { workspace = true, optional = true }
tokio = { workspace = true, optional = true, features = ["fs"] }
tokio-stream = { version = "0.1", optional = true, default-features = false, features = ["sync"] }

[dev-dependencies]
# TEST-ONLY ephemeral self-signed cert to exercise the rustls acceptor wiring in
# `serve`/`cert` tests. Never a production issuance path.
rcgen = { version = "0.13", default-features = false, features = ["ring", "pem"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util"] }

[features]
default = ["async_tokio"]
async_tokio = ["dep:futures-util", "dep:tokio", "dep:tokio-stream"]

# Allow derp connections to be made without verifying TLS certs. Only for use in tests.
insecure-derp = ["ts_derp/insecure-for-tests"]
# Allow control keys to be fetched over plain HTTP1 without TLS. Only for use in tests.
insecure-keyfetch = []
# SaaS-only WIF/OAuth-client auth-key bootstrap (off by default; a self-hosted control plane lacks these endpoints).
identity-federation = []

[lints]
workspace = true
