[package]
name = "geiserx_ts_dns_wire"
version.workspace = true
description = "minimal RFC 1035 DNS query parser and response encoder for MagicDNS"
categories = ["network-programming", "parser-implementations", "no-std"]
keywords = ["tailscale", "dns", "magicdns", "rfc1035", "wire"]

repository.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true


[lib]
name = "ts_dns_wire"
[dependencies]

[lints]
workspace = true
