[package]
name = "geiserx_ts_hexdump"
version.workspace = true
description = "hexdumps for byte iterators"
categories = ["encoding"]
keywords = ["tailscale", "hexdump", "hex", "bytes"]

repository.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true


[lib]
name = "ts_hexdump"
[features]
default = ["alloc"]
alloc = []

[dependencies]
heapless.workspace = true

[lints]
workspace = true
