[package]
name = "geiserx_ts_magicsock"
version.workspace = true
description = "tailscale direct (disco) UDP underlay transport"
categories = ["network-programming", "asynchronous"]
keywords = ["tailscale", "disco", "magicsock", "nat", "transport"]

repository.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true


[lib]
name = "ts_magicsock"
[dependencies]
# Our crates.
ts_disco_protocol.workspace = true
ts_keys.workspace = true
ts_metrics.workspace = true
ts_packet.workspace = true
ts_transport.workspace = true

# Unconditionally required dependencies.
# `if-addrs` enumerates the host's interface addresses (libc `getifaddrs` on POSIX, the
# `windows-sys` IP-helper on Windows) so `self_endpoints` can advertise real global-unicast IPv6
# interface addresses as local disco candidates when IPv6 is enabled. Pure syscall wrapper — pulls
# only `libc`/`windows-sys`, no TLS stack (verified via `cargo tree`), keeping the egress path clean.
if-addrs = "0.15"
rand.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["net", "sync", "rt", "time", "macros"] }
tracing.workspace = true
zerocopy = { workspace = true, features = ["std"] }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
tracing-test.workspace = true

[lints]
workspace = true
