[package]
name = "ts_metrics"
version.workspace = true
description = "in-process client metrics registry (clientmetric parity) with Prometheus text export"
categories = ["network-programming"]
keywords = ["tailscale", "metrics", "clientmetric", "prometheus"]

repository.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]

[lints]
workspace = true
