[package]
name = "geiserx_ts_packet"
version.workspace = true
description = "tailscale packet types"
categories = ["no-std", "network-programming"]
keywords = ["tailscale", "packet", "network"]

repository.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true


[lib]
name = "ts_packet"
[dependencies]
bytes.workspace = true
crypto_box.workspace = true
ts_hexdump.workspace = true

[lints]
workspace = true
