[package]
name = "ts_runtime"
version.workspace = true
description = "tailscale runtime"
categories = ["network-programming"]
keywords = ["tailscale", "runtime"]

repository.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
# Our crates.
ts_bart.workspace = true
ts_bart_packetfilter.workspace = true
ts_control.workspace = true
ts_dataplane.workspace = true
ts_dns_wire.workspace = true
ts_forwarder.workspace = true
ts_keys.workspace = true
ts_magicsock.workspace = true
ts_netcheck.workspace = true
ts_netstack_smoltcp = { workspace = true, features = ["tokio"] }
ts_overlay_router.workspace = true
ts_packet.workspace = true
ts_packetfilter = { workspace = true, features = ["checking-filter"] }
ts_packetfilter_state.workspace = true
ts_transport.workspace = true
ts_transport_tun = { workspace = true, optional = true }
ts_derp.workspace = true
ts_tunnel.workspace = true

# Unconditionally required dependencies.
base64.workspace = true
futures.workspace = true
httparse.workspace = true
ipnet.workspace = true
kameo = "0.19"
kameo_actors = "0.4"
thiserror.workspace = true
tokio = { workspace = true, features = ["net", "time"] }
tracing.workspace = true
smallvec.workspace = true

[features]
# Off by default. Enables the TUN-mode overlay transport (ts_transport_tun) so the runtime can
# run the application data path over a real OS TUN interface instead of the userspace netstack.
# TUN device creation needs root/CAP_NET_ADMIN; off the ring-only egress path.
tun = ["dep:ts_transport_tun"]

[dev-dependencies]
rand = "0.10"
proptest = "1.11"
itertools = "0.14"

[lints]
workspace = true
