[package]
name = "geiserx_ts_runtime"
version.workspace = true
description = "tailscale runtime"
categories = ["network-programming"]
keywords = ["tailscale", "runtime"]

repository.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true


[lib]
name = "ts_runtime"
[dependencies]
# `StatusNode.last_seen` exposes a `chrono::DateTime<Utc>` on a public field (mirrors
# `ts_control::Node.last_seen` / Go `PeerStatus.LastSeen`). Already a transitive dep via `ts_control`.
chrono = { workspace = true }
# Our crates.
ts_bart.workspace = true
ts_bart_packetfilter.workspace = true
ts_control.workspace = true
ts_dataplane.workspace = true
ts_dns_wire.workspace = true
ts_forwarder.workspace = true
ts_keys.workspace = true
ts_magicsock.workspace = true
ts_netcheck.workspace = true
# Optional: the OS link-change monitor core (trait + debouncer + synthetic/no-op monitors). Pulled
# in ONLY behind the `network-monitor` feature so the default ring-only graph stays free of it (it
# itself depends on nothing but tokio + tracing; the OS backends in later slices stay hand-rolled on
# libc, never a route crate). See the `network-monitor` feature below.
ts_netmon = { workspace = true, optional = true }
ts_netstack_smoltcp = { workspace = true, features = ["tokio"] }
ts_overlay_router.workspace = true
ts_packet.workspace = true
ts_packetfilter = { workspace = true, features = ["checking-filter"] }
ts_packetfilter_state.workspace = true
ts_tka.workspace = true
ts_transport.workspace = true
ts_transport_tun = { workspace = true, optional = true }
ts_host_net = { workspace = true, optional = true }
ts_derp.workspace = true
ts_tunnel.workspace = true

# Unconditionally required dependencies.
base64.workspace = true
# TUN-mode only: parse inbound IPv4+UDP TUN packets and build the MagicDNS reply
# (recomputing IPv4+UDP checksums) for the in-datapath quad-100 DNS intercept.
etherparse = { version = "0.19", optional = true }
futures.workspace = true
httparse.workspace = true
ipnet.workspace = true
kameo = "0.19"
kameo_actors = "0.4"
thiserror.workspace = true
tokio = { workspace = true, features = ["net", "time", "io-util", "sync"] }
tracing.workspace = true
smallvec.workspace = true
# For `DeviceState::NeedsLogin(url::Url)` / `RegistrationError::NeedsLogin` — the interactive-auth
# URL control hands back, surfaced through the device-state machine.
url.workspace = true
# Jitter for the DERP reconnect backoff (multiderp). Already a normal dependency of the sibling
# magicsock/tunnel crates, so this pulls in nothing new.
rand.workspace = true

# Unix-only: the `O_NOFOLLOW` open flag for the taildrop file ops, so a final-component symlink is
# refused atomically by the kernel rather than by an advisory lstat-then-open check. This is fork
# hardening beyond upstream Go (whose taildrop opens without `O_NOFOLLOW`). `std` does not expose the
# flag and its value is arch-dependent, so it comes from `libc`. Already in the dependency graph
# transitively (a normal dep of tokio and others), so declaring it directly here pulls in no new crate.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[features]
# Off by default. Enables the TUN-mode overlay transport (ts_transport_tun) so the runtime can
# run the application data path over a real OS TUN interface instead of the userspace netstack.
# TUN device creation needs root/CAP_NET_ADMIN; off the ring-only egress path.
tun = ["dep:ts_transport_tun", "dep:ts_host_net", "dep:etherparse"]
# Off by default. Enables the internal OS network-link monitor: the `NetmonSupervisor` actor that,
# on a link change (Wi-Fi switch, sleep/wake, default-route change), re-binds the underlay socket
# and re-probes connectivity (re-ping, immediate STUN, re-netcheck). Gated behind both this feature
# AND the runtime `Config::network_monitor` flag (default off); with the feature off the supervisor
# and its dependency compile out entirely, preserving the pure-engine posture. The OS event-source
# backends (Linux netlink, macOS PF_ROUTE) are later slices; this slice ships the OS-free core.
network-monitor = ["dep:ts_netmon"]
# Client-side ACME (Let's Encrypt) cert issuance via the node's set-dns RPC. Off by default and
# SaaS-only (forwards to `ts_control/acme`). Enables `Runtime::get_certificate` + the ControlRunner
# `GetCertificate` message; a self-hosted control plane 501s on set-dns so issuance is
# non-functional there.
acme = ["ts_control/acme"]

[dev-dependencies]
proptest = "1.11"
itertools = "0.14"
# Test-only: sign the TKA node-key-signature fixtures the peer_tracker TKA enforcement tests verify
# against (mirrors how `ts_tka`'s own unit tests build a valid signature). Not on any egress path.
ed25519-dalek = "2"

[lints]
workspace = true
