[package]
name = "geiserx_ts_time"
version.workspace = true
description = "time- and scheduling-oriented utilities for tailscale"
categories = ["date-and-time", "data-structures"]
keywords = ["tailscale", "time", "schedule"]

repository.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true


[lib]
name = "ts_time"
[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true
