[package]
name = "geiserx_ts_tunnel"
version.workspace = true
description = "secure packet tunnel over udp"
categories = ["cryptography", "network-programming", "encoding"]
keywords = ["tailscale", "wireguard", "tunnel", "udp", "sans-io"]

repository.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true


[lib]
name = "ts_tunnel"
[dependencies]
# Our crates.
ts_keys.workspace = true
ts_packet.workspace = true
ts_time.workspace = true

# Unconditionally required dependencies.
aead.workspace = true
blake2.workspace = true
chacha20poly1305.workspace = true
hkdf.workspace = true
itertools.workspace = true
rand.workspace = true
tracing.workspace = true
x25519-dalek.workspace = true
zerocopy.workspace = true

[dev-dependencies]
# Dependencies required for examples.
base64.workspace = true
bytes.workspace = true
clap = { workspace = true, features = ["derive", "env"] }
hex = "0.4"
tokio = { workspace = true, features = ["full", "macros"] }
ts_cli_util.workspace = true
proptest.workspace = true
# Project Wycheproof ChaCha20Poly1305 adversarial vectors (dev-only KAT). See VENDOR.md.
wycheproof.workspace = true
# Statistical constant-time leakage *detection* (Reparaz dudect t-test) for the AEAD-decrypt /
# tag-compare path. Detects leaks (max_t > 5), never *proves* constant-timeness — see
# docs/CRYPTOGRAPHY.md §7. Bench-only; not wired into the default CI gate (run on demand).
dudect-bencher = "0.7"

# Constant-time leakage-detection harness (dudect t-test). Run with:
#   cargo bench -p geiserx_ts_tunnel --bench constant_time
# Not part of the default test gate; informational (detect, never prove).
[[bench]]
name = "constant_time"
harness = false

[lints]
workspace = true
